完善基本框架